--- a/web/src/main/resources/static/package.json
+++ b/web/src/main/resources/static/package.json
@@ -30,6 +30,7 @@
     "babel-preset-stage-1": "^6.1.18",
     "bootstrap": "^4.0.0",
     "font-awesome": "^4.7.0",
+    "google-map-react": "^0.34.0",
     "lodash": "^3.10.1",
     "react": "^0.14.3",
     "react-dom": "^0.14.3",
