appointment and patient

--- a/appointment/src/main/resources/application.yaml
+++ b/appointment/src/main/resources/application.yaml
@@ -1,20 +1,31 @@
-spring:
-  data:
-    mongodb: 
-      database: wellme
-      host: localhost
-      port: 27017
-      
 spring: 
-  datasource:
-    url: jdbc:mysql://localhost:3306/medilink
-    username: root
-    password: password      
+  application:
+    name: practice  
+    
+server:
+  port: 8083      
+  
+medilink:
+  appointment:
+    db:
+      url: jdbc:mysql://localhost:3306/medilink
+      username: root
+      password: password   
+   
     
 appointment: 
   search:
     ByParticipants: | 
-    select ev.event_id, ev.event_name, ev.event_description, ev.start_date, ev.end_date, ev.event_location, ev.is_full_day, ev.is_recurring, ev.version_id event_version_id
-    , ep.participant_id, ep.participant_typ, ep.participation_status, ep.participation_status_dt, ep.participation_status_comments, ep.version_id participant_version_id
-    from medilink.event ev, medilink.event_participants ep where ev.event_id = ep.event_id and ep.participation_status != 'DECLINED'  and CONCAT(ep.participant_id, '-', ep.participant_typ) in (:participantIdsAndTypes)
+                    select ev.event_id, ev.event_name, ev.event_description, ev.start_date, ev.end_date, ev.event_location, ev.is_full_day, ev.is_recurring, ev.version_id event_version_id
+                    , ep.participant_id, ep.participant_typ, ep.participation_status, ep.participation_status_dt, ep.participation_status_comments, ep.version_id participant_version_id
+                     from medilink.event ev, medilink.event_participants ep where ev.event_id = ep.event_id and ep.participation_status != 'DECLINED'  and CONCAT(ep.participant_id, '-', ep.participant_typ) in (:participantIdsAndTypes)
  
+ #Hibernate Configuration
+hibernate:
+  dialect: org.hibernate.dialect.H2Dialect
+  hbm2ddl:
+    auto: create-drop
+  ejb: 
+    naming_strategy :  org.hibernate.cfg.ImprovedNamingStrategy
+  show_sql: false
+  format_sql: true
