--- a/patient/src/main/resources/application.yaml
+++ b/patient/src/main/resources/application.yaml
@@ -1,7 +1,9 @@
 spring:
   application:
     name:patient
+server:
+  port: 8082    
     
 appointment:
   service:
-    url:http://localhost:
+    url: http://localhost:8083/createAppointment
