2 changes on server side: 1. Added CORS to all services 2. Set up separate mysql user (medilink)

--- a/appointment/src/main/resources/application.yaml
+++ b/appointment/src/main/resources/application.yaml
@@ -9,7 +9,7 @@ medilink:
   appointment:
     db:
       url: jdbc:mysql://localhost:3306/medilink
-      username: root
+      username: medilink
       password: password   
    
     
