--- a/patient/pom.xml
+++ b/patient/pom.xml
@@ -8,7 +8,7 @@
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>practice</name>
+	<name>patient</name>
 	<description>patient service</description>
 
 	<parent>
@@ -57,6 +57,11 @@
 			<artifactId>jackson-mapper-asl</artifactId>
 			<version>1.9.4</version>
 		</dependency>
+        <dependency>
+            <groupId>commons-collections</groupId>
+            <artifactId>commons-collections</artifactId>
+            <version>3.2.2</version>
+        </dependency>
 	</dependencies>
 
 	<dependencyManagement>
