--- a/authentication-service/src/main/resources/application.yaml
+++ b/authentication-service/src/main/resources/application.yaml
@@ -2,6 +2,10 @@ spring:
   application:
     name: authentication-service  
     
+logging:
+  level:
+    org.springframework.security: DEBUG
+    
 server:
   port: 8089
 #  servlet:
@@ -18,8 +22,14 @@ medilink:
 hibernate:
   dialect: org.hibernate.dialect.H2Dialect
   hbm2ddl: 
-    auto: 
+    auto: none
   ejb: 
     naming_strategy :  org.hibernate.cfg.ImprovedNamingStrategy
   show_sql: false
-  format_sql: true      
+  format_sql: true 
+  
+  
+security:
+  oauth2:
+    resource:
+      filter-order: 3
