--- a/zuul-ag/src/main/resources/application.yaml
+++ b/zuul-ag/src/main/resources/application.yaml
@@ -1,24 +1,30 @@
-spring:
+spring: 
   application:
-    name: patient
-server:
-  port: 8082
+    name: zuulag  
     
-appointment:
-  service:
-    url: http://localhost:8083/createAppointment
+server:
+  port: 8090
 
-user:
-  service:
-    url: http://localhost:8089/signUpUser
+eureka:
+  client:
+    serviceUrl:
+      defaultZone: http://localhost:8761/eureka/
 
 logging:
   level:
     org.springframework.security: DEBUG
-    
+      
+zuul:
+  routes:
+    practice: /practice/**
+    patient: /patient/**
+    appointment: /appointment/**
+
 security:
   basic:
-    enabled: false
+    enabled: true
+  ignored:
+  - "*.bundle.*"  
   oauth2:
     client:
       clientId: medilink
@@ -28,5 +34,4 @@ security:
     resource:
       userInfoUri: http://localhost:8089/user
       tokenInfoUri: http://localhost:8089/oauth/check_token
-      filter-order: 3
-              
+  
