--- a/practice/src/main/resources/application.yaml
+++ b/practice/src/main/resources/application.yaml
@@ -8,16 +8,21 @@ server:
 appointment:
   service:
     url: http://localhost:8083/searchAppointmentsByParticipantIdsAndTypes
+
+logging:
+  level:
+    org.springframework.security: DEBUG
     
 security:
   basic:
     enabled: false
   oauth2:
     client:
-      clientId: practice
-      clientSecret: password
-      accessTokenUri: http://localhost:8089/oauth/token
-      userAuthorizationUri: http://localhost:8089/oauth/authorize
+      clientId: medilink
+      clientSecret: Password
+      accessTokenUri: http://localhost:8093/oauth/token
+      userAuthorizationUri: http://localhost:8093/oauth/authorize
     resource:
-      userInfoUri: http://localhost:8089/user/me
-      tokenInfoUri: http://localhost:8089/oauth/check_token
+      userInfoUri: http://localhost:8093/user
+      tokenInfoUri: http://localhost:8093/oauth/check_token
+      filter-order: 3
