--- a/zuul-ag/src/main/resources/application.yaml
+++ b/zuul-ag/src/main/resources/application.yaml
@@ -21,6 +21,18 @@ zuul:
     appointment: /appointment/**
     authentication-service: /auth/**
 
+    
+ribbon:
+  ReadTimeout: 60000
+  ConnectTimeout: 60000
+  
+hystrix:
+  command:
+    default:
+      execution:
+        isolation:
+          thread:
+            timeoutInMilliseconds: 60000  
 security:
   basic:
     enabled: false
