--- a/web/src/main/resources/static/package.json
+++ b/web/src/main/resources/static/package.json
@@ -8,6 +8,7 @@
     "font-awesome": "^4.7.0",
     "google-map-react": "^1.0.3",
     "lodash": "^4.17.10",
+    "prop-types": "^15.6.2",
     "react": "^16.3.2",
     "react-dom": "^16.3.2",
     "react-geocode": "0.0.9",
@@ -17,7 +18,8 @@
     "react-scripts": "1.1.4",
     "redux": "^4.0.0",
     "redux-form": "^7.3.0",
-    "redux-promise": "^0.6.0"
+    "redux-promise": "^0.6.0",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
