some twillio and other changes

--- a/patient/src/main/resources/application.yaml
+++ b/patient/src/main/resources/application.yaml
@@ -6,7 +6,12 @@ server:
     
 appointment:
   service:
-    url: http://localhost:8083/createAppointment
+    createAppointment:
+      url: http://localhost:8083/createAppointment
+    updateAppointment:
+      url: http://localhost:8083/updateAppointment
+    cancelAppointment:
+      url: http://localhost:8083/cancelAppointment
 
 user:
   service:
