--- a/web/pom.xml
+++ b/web/pom.xml
@@ -5,11 +5,11 @@
 	<modelVersion>4.0.0</modelVersion>
 
 	<groupId>com.wellme</groupId>
-	<artifactId>service-discovery</artifactId>
+	<artifactId>medilink-web</artifactId>
 	<version>0.0.1-SNAPSHOT</version>
 	<packaging>jar</packaging>
 
-	<name>service-discovery</name>
+	<name>medilink-web</name>
 	<description>patient service</description>
 
 	<parent>
@@ -67,6 +67,52 @@
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
 			</plugin>
+			<!-- <plugin>
+				<groupId>com.github.eirslett</groupId>
+				<artifactId>frontend-maven-plugin</artifactId>
+				Use the latest released version: https://repo1.maven.org/maven2/com/github/eirslett/frontend-maven-plugin/
+				<version>1.6</version>
+				optional
+				<configuration>
+					<workingDirectory>src/main/resources/static</workingDirectory>
+				</configuration>
+				<executions>
+
+					<execution>
+						<id>install node and npm</id>
+						<goals>
+							<goal>install-node-and-npm</goal>
+						</goals>
+						<configuration>
+							See https://nodejs.org/en/download/ for latest node and npm (lts) 
+								versions
+							<nodeVersion>v8.11.1</nodeVersion>
+							<npmVersion>5.6.0</npmVersion>
+						</configuration>
+					</execution>
+
+					<execution>
+						<id>npm install</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						Optional configuration which provides for running any npm command
+						<configuration>
+							<arguments>install</arguments>
+						</configuration>
+					</execution>
+
+					<execution>
+						<id>npm run start</id>
+						<goals>
+							<goal>npm</goal>
+						</goals>
+						<configuration>
+							<arguments>run start</arguments>
+						</configuration>
+					</execution>
+				</executions>
+			</plugin> -->
 		</plugins>
 	</build>
 
