--- a/practice/pom.xml
+++ b/practice/pom.xml
@@ -23,6 +23,7 @@
 		<project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
 		<project.reporting.outputEncoding>UTF-8</project.reporting.outputEncoding>
 		<java.version>1.8</java.version>
+		<swagger-codegen.version>2.1.5</swagger-codegen.version>
 		<spring-cloud.version>Edgware.SR1</spring-cloud.version>
 	</properties>
 
@@ -76,6 +77,21 @@
 			<artifactId>guava</artifactId>
 			<version>21.0</version>
 		</dependency>
+		<dependency>
+			<groupId>io.swagger</groupId>
+			<artifactId>swagger-annotations</artifactId>
+			<version>1.5.13</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger2</artifactId>
+			<version>2.7.0</version>
+		</dependency>
+		<dependency>
+			<groupId>io.springfox</groupId>
+			<artifactId>springfox-swagger-ui</artifactId>
+			<version>2.7.0</version>
+		</dependency>
 	</dependencies>
 
 	<dependencyManagement>
@@ -95,6 +111,30 @@
 			<plugin>
 				<groupId>org.springframework.boot</groupId>
 				<artifactId>spring-boot-maven-plugin</artifactId>
+			</plugin>
+			<plugin>
+				<groupId>io.swagger</groupId>
+				<artifactId>swagger-codegen-maven-plugin</artifactId>
+				<version>${swagger-codegen.version}</version>
+				<executions>
+					<execution>
+						<id>SearchAPIs</id>
+						<phase>validate</phase>
+						<goals>
+							<goal>generate</goal>
+						</goals>
+						<configuration>
+							<inputSpec>${project.basedir}/src/main/resources/swagger/medilink-api-definitions.yaml</inputSpec>
+							<language>spring-mvc</language>
+							<output>${project.build.directory/generated-sources/swagger}</output>
+							<configOptions>
+								<modelPackage>com.wellme.domain</modelPackage>
+								<apiPackage>com.wellme.search.api</apiPackage>
+								<library>j8-async</library>
+							</configOptions>
+						</configuration>
+					</execution>
+				</executions>
 			</plugin>
 		</plugins>
 	</build>
